crates/obzenflow_runtime/tests/compile_fail/effects_outcome_not_output_subset.stderr
error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effects_outcome_not_output_subset.rs:38:8
   |
38 |     fx.perform(AllowedEffect).await.unwrap();
   |        ^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `SubsetOf<WithMember<StageOutput, EmptySet>, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>` is not implemented for `WithMember<EffectOutcome, EmptySet>`
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::perform`
  --> src/effects/typed.rs
   |
   |     pub async fn perform<E, EffectAt, OutcomeProof>(
   |                  ------- required by a bound in this associated function
...
   |         <E::Outcome as StageFactSet>::Members: SubsetOf<Output::Members, OutcomeProof>,
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::perform`

error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effects_outcome_not_output_subset.rs:38:16
   |
38 |     fx.perform(AllowedEffect).await.unwrap();
   |                ^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `SubsetOf<WithMember<StageOutput, EmptySet>, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>` is not implemented for `WithMember<EffectOutcome, EmptySet>`
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::perform`
  --> src/effects/typed.rs
   |
   |     pub async fn perform<E, EffectAt, OutcomeProof>(
   |                  ------- required by a bound in this associated function
...
   |         <E::Outcome as StageFactSet>::Members: SubsetOf<Output::Members, OutcomeProof>,
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::perform`

error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effects_outcome_not_output_subset.rs:38:5
   |
38 |     fx.perform(AllowedEffect).await.unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `SubsetOf<WithMember<StageOutput, EmptySet>, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>` is not implemented for `WithMember<EffectOutcome, EmptySet>`
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::perform`
  --> src/effects/typed.rs
   |
   |     pub async fn perform<E, EffectAt, OutcomeProof>(
   |                  ------- required by a bound in this associated function
...
   |         <E::Outcome as StageFactSet>::Members: SubsetOf<Output::Members, OutcomeProof>,
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::perform`

error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effects_outcome_not_output_subset.rs:38:31
   |
38 |     fx.perform(AllowedEffect).await.unwrap();
   |                               ^^^^^ unsatisfied trait bound
   |
   = help: the trait `SubsetOf<WithMember<StageOutput, EmptySet>, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>` is not implemented for `WithMember<EffectOutcome, EmptySet>`
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::perform`
  --> src/effects/typed.rs
   |
   |     pub async fn perform<E, EffectAt, OutcomeProof>(
   |                  ------- required by a bound in this associated function
...
   |         <E::Outcome as StageFactSet>::Members: SubsetOf<Output::Members, OutcomeProof>,
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::perform`
